--- a/Micheal/First-Project/ProductsCRUDAPI/ProductsCRUDAPI/Properties/launchSettings.json
+++ b/Micheal/First-Project/ProductsCRUDAPI/ProductsCRUDAPI/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:42608",
+      "applicationUrl": "http://localhost:48749",
       "sslPort": 0
     }
   },
   "profiles": {
-    "WebApiWithMongoDB": {
+    "ProductsCRUDAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5193",
+      "applicationUrl": "http://localhost:5221",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
