--- a/Group-2/searchApp.Api/appsettings.Development.json
+++ b/Group-2/searchApp.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiSearchKeys":{
+    "Apikey": "e9173dceaamshfef2abf440e3544p12f4c1jsn24f8f071fb02",
+    "ApiHost": "google-search3.p.rapidapi.com"
   }
 }
