Add search endpoint

--- a/Group-2/searchApp.Service/searchApp.Service.csproj
+++ b/Group-2/searchApp.Service/searchApp.Service.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\searchApp.Domain\searchApp.Domain.csproj" />
+    <ProjectReference Include="..\searchApp.Repository\searchApp.Repository.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
