--- a/Gabriel/FourthClass/HttpClientTest/appsettings.Development.json
+++ b/Gabriel/FourthClass/HttpClientTest/appsettings.Development.json
@@ -1,14 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-1DRMBC1;Database=BootcampDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiFootballKeys": {
-    "ApiUrl": "https://api-football-v1.p.rapidapi.com/v3/timezone",   
-    "PredictionsUrl": "https://api-football-v1.p.rapidapi.com/v3/predictions?fixture=198772",
+  "CockTailDb": {
+    "ApiUrl": "https://the-cocktail-db.p.rapidapi.com/search.php?s=vodka",
     "Apikey": "319d254bb3msh58fde8adfe8257ep1c385ajsn5398d9e9af17",
-    "ApiHost": "api-football-v1.p.rapidapi.com"
+    "ApiHost": "the-cocktail-db.p.rapidapi.com"
   }
 }
